# orchard

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  COPYING  Cargo.toml  INTERNAL-README.md  LICENSE-BOSL  README.md  chapter_1.html  concepts.html  design.html  index.html  print.html  search-index.json  searchindex.js  searchindex.json  sitemap.xml  user.html
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: bench.yml  book.yml  ci.yml  lints-beta.yml  lints-stable.yml  onboarding-docs.yml  zizmor.yml
action-circuit/: index.html
appendix-gates/: index.html
assets/css/: styles.654b4da2.css  styles.6e36955b.css  styles.710676e4.css  styles.777a5427.css  styles.dd299735.css
assets/js/: 00266585.4f3aa592.js  00266585.869b1485.js  01b9b646.b7a36737.js  01b9b646.d7465e97.js  01b9b646.f6333e3c.js  0748885e.568bb83f.js  0748885e.c0ea2658.js  0748885e.e9495002.js  09e2e6b2.2e18c548.js  09e2e6b2.42042303.js  09e2e6b2.cf11311f.js  0ef8bf9e.9ae4cd85.js  0ef8bf9e.b6b615d2.js  0ef8bf9e.c4ca2cfa.js  0ef8bf9e.c5849b7a.js  1301.7f2f0dc7.js  138e0e15.6b919cc1.js  138e0e15.b44b9d17.js  1513.72df9838.js  153711ce.bce062a5.js  153711ce.c8238c13.js  153711ce.fd889239.js  15dbf90a.0e49d286.js  15dbf90a.47c55196.js  15dbf90a.499f7391.js  165.17f13688.js  1666e941.278442a7.js  1666e941.607f2781.js  1666e941.fefc6540.js  17896441.30dd2364.js  17896441.cee8eebd.js  1795.4699f5b5.js  1844.c2b927b4.js  1a4e3797.6d2965c2.js  1a4e3797.8b7a3038.js  1b64952f.27e0ebdf.js  1b64952f.3b9ba5ee.js  1b64952f.998f5f4a.js  1b64952f.e2718bb2.js  2014.d01862af.js  (+210 more)
audits/: index.html
benches/: circuit.rs  note_decryption.rs  primitives.rs  small.rs  utils.rs
benches/utils/: mod.rs
book/: book.toml  macros.txt
book/src/: SUMMARY.md  design.md  requirements.md
build-test-contribute/: index.html
bundle-and-builder/: index.html
cheat-sheet/: index.html
concepts/: preliminaries.html
crate-map/: index.html
dependencies/: index.html
design/: actions.html  circuit.html  commitment-tree.html  commitments.html  keys.html  nullifiers.html  signatures.html
design/circuit/: commit-ivk.html  gadgets.html  note-commit.html
dev/bench/: data.js
discovery/: index.html
glossary/: index.html
halo2-gadgets/: Cargo.toml
halo2-gadgets/halo2_ecc/: Cargo.toml
halo2-gadgets/halo2_ecc/src/: chip.rs  gadget.rs  lib.rs
halo2-gadgets/halo2_ecc/src/chip/: add.rs  add_incomplete.rs  mul.rs  witness_point.rs
halo2-gadgets/halo2_ecc/src/chip/mul/: overflow.rs
halo2-gadgets/halo2_ecc/src/chip/mul_fixed/: base_field_elem.rs  full_width.rs  short.rs  util.rs
halo2-gadgets/halo2_poseidon/: Cargo.toml
halo2-gadgets/halo2_poseidon/benches/: primitive.rs
halo2-gadgets/halo2_poseidon/src/: gadget.rs  lib.rs  pow5t3.rs  primitive.rs
halo2-gadgets/halo2_poseidon/src/primitive/: grain.rs  mds.rs  p128pow5t3.rs
halo2-gadgets/halo2_utilities/: Cargo.toml
halo2-gadgets/halo2_utilities/src/: cond_swap.rs  decompose_running_sum.rs  lib.rs  lookup_range_check.rs  utilities.rs
halo2-gadgets/sinsemilla/: Cargo.toml
halo2-gadgets/sinsemilla/benches/: primitive.rs
halo2-gadgets/sinsemilla/src/: chip.rs  gadget.rs  lib.rs  merkle.rs  message.rs  primitive.rs
halo2-gadgets/sinsemilla/src/chip/: generator_table.rs  hash_to_point.rs
halo2-gadgets/sinsemilla/src/merkle/: chip.rs
halo2-primer/: index.html
halo2_gadgets/: Cargo.toml
halo2_gadgets/benches/: primitives.rs
halo2_gadgets/src/: ecc.rs  lib.rs  poseidon.rs  sinsemilla.rs  utilities.rs
keys-and-addresses/: index.html
merkle-tree/: index.html
note-encryption/: index.html
notes-nullifiers-commitments/: index.html
onboarding/: .gitignore  Makefile  docusaurus.config.ts  package-lock.json  package.json
onboarding/data/: parse_v5.py  print_bundle.rs  pyproject.toml  zip_0244.json
onboarding/docs/: 01-crate-map.md  01-overview.md  02-build-test-contribute.md  02-pasta-curves.md  03-halo2-primer.md  03-pasta-curves.md  04-action-circuit.md  04-halo2-primer.md  05-action-circuit.md  05-sinsemilla.md  06-poseidon.md  06-sinsemilla.md  07-keys-and-addresses.md  07-poseidon.md  08-keys-and-addresses.md  08-notes-nullifiers-commitments.md  09-note-encryption.md  09-notes-nullifiers-commitments.md  10-merkle-tree.md  10-note-encryption.md  11-bundle-and-builder.md  11-merkle-tree.md  12-bundle-and-builder.md  12-value-commitments.md  13-redpallas.md  13-value-commitments.md  14-dependencies.md  14-redpallas.md  15-dependencies.md  15-test-vectors.md  16-audits.md  16-test-vectors.md  17-audits.md  17-study-plan.md  18-shielded-transfers.md  18-study-plan.md  19-research-frontier.md  20-study-plan.md  appendix-gates.md  cheat-sheet.md  (+7 more)
onboarding/tools/qa-bot/: .env.example  .gitignore  README.md  pyproject.toml
onboarding/tools/qa-bot/src/qa_bot/: __init__.py  chunk.py  cli.py  config.py  index.py  llm.py  prompt.py  retrieve.py  server.py  store.py
onboarding/tools/qa-bot/static/: index.html
pasta-curves/: index.html
poseidon/: index.html
pr-checklist/: index.html
protocol-lineage/: index.html
public/: Cargo.toml  README.md  katex-header.html
public/src/: lib.rs
public/tests/: builder.rs
redpallas/: index.html
references/: index.html
research-frontier/: index.html
search/: index.html
shielded-transfers/: index.html
sinsemilla/: index.html
src/: action.rs  address.rs  amount.rs  asset_record.rs  asset_type.rs  builder.rs  bundle.rs  circuit.rs  circuit_description  constants.rs  domain.rs  endo.rs  flavor.rs  issuance.rs  issuance_auth.rs  issuance_sighash_versioning.rs  keys.rs  lib.rs  note.rs  note_encryption.rs  note_encryption_v2v3.rs  note_encryption_v3.rs  orchard_flavor.rs  pczt.rs  primitives.rs  sighash_kind.rs  sighash_versioning.rs  spec.rs  supply_info.rs  test_vectors.rs  tree.rs  value.rs  zip32.rs
src/bundle/: batch.rs  (+2 more)
study-plan/: index.html
test-vectors/: index.html
tests/: builder.rs  issuance_global_state.rs  zsa.rs
user/: creating-notes.html  integration.html  keys.html  spending-notes.html
value-commitments/: index.html
worked-example/: index.html
(+170 files in other folders)
