[package]
name = "orchard"
version = "0.12.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@electriccoin.co>",
    "Daira-Emma Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2021"
rust-version = "1.70"
description = "The Orchard shielded transaction protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/orchard"
documentation = "https://docs.rs/orchard"
readme = "../README.md"
categories = ["cryptography::cryptocurrencies"]
keywords = ["zcash"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
__impl = { package = "orchard_internal", path = "..", default-features = false }

[features]
default = ["circuit", "multicore", "std"]
std = ["__impl/std"]
circuit = ["__impl/circuit"]
multicore = ["__impl/multicore"]
unstable-frost = ["__impl/unstable-frost"]
dev-graph = ["__impl/dev-graph"]
test-dependencies = ["__impl/test-dependencies"]

[dev-dependencies]
incrementalmerkletree = "0.8.1"
rand = "0.8"
shardtree = "0.6"
zcash_note_encryption = "0.4"
