[package]
name = "halo2_poseidon"
version = "0.0.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
description = "Poseidon hash function"
license-file = "LICENSE-BOSL"
repository = "https://github.com/zcash/orchard"
documentation = "https://docs.rs/orchard"
readme = "README.md"

# We are not publishing this yet.
publish = false

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.4.2", features = ["criterion", "flamegraph"] }

[dependencies]
bitvec = "0.22"
ff = "0.10"
halo2 = { version = "0.0", optional = true }
pasta_curves = "0.1.2"
utilities = { package = "halo2_utilities", version = "0.0", path = "../halo2_utilities" }

[[bench]]
name = "primitive"
harness = false
