[package]
name = "halo2_poseidon"
version = "0.0.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
description = "Poseidon hash function"
license-file = "LICENSE-BOSL"
repository = "https://github.com/zcash/orchard"
documentation = "https://docs.rs/orchard"
readme = "README.md"

# We are not publishing this yet.
publish = false

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.4.2", features = ["criterion", "flamegraph"] }

[dependencies]
bitvec = "0.22"
ff = "0.11"
halo2 = { version = "=0.1.0-beta.1", optional = true }
pasta_curves = "0.2.1"
rand = "0.8"
utilities = { package = "halo2_utilities", version = "0.0", path = "../halo2_utilities" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "primitive"
harness = false
