[package]
name = "sinsemilla"
version = "0.0.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
description = "Sinsemilla hash function"
license-file = "LICENSE-BOSL"
repository = "https://github.com/zcash/orchard"
documentation = "https://docs.rs/orchard"
readme = "README.md"

# We are not publishing this yet.
publish = false

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.4.2", features = ["criterion", "flamegraph"] }

[dependencies]
ecc = { package = "halo2_ecc", version = "0.0", path = "../halo2_ecc" }
ff = "0.10"
group = "0.10"
halo2 = { version = "0.0", optional = true }
pasta_curves = "0.1.2"
rand = "0.8"
subtle = "2.3"
utilities = { package = "halo2_utilities", version = "0.0", path = "../halo2_utilities" }

[dev-dependencies]
orchard = "0.0"

[features]
testing = []

[[bench]]
name = "primitive"
harness = false
