[project]
name = "qa-bot"
version = "0.1.0"
description = "Local RAG chatbot complementary to the Docusaurus search."
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "fastembed>=0.4",
    "httpx>=0.27",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "sqlite-vec>=0.1.6",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
qa-bot = "qa_bot.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_bot"]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
